--- a/css/index.css
+++ b/css/index.css
@@ -8,11 +8,14 @@
     font-size: small;
     width: 99%;
     margin: 0.5%;
-    padding-top: 2%;
-    padding-bottom: 0.7%;
+    padding: 1rem;
     color: white;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
     text-align: center;
+}
+
+.loading{
+    padding: 2rem;
 }
 
 .itensOne:hover {
