--- a/css/index.css
+++ b/css/index.css
@@ -53,10 +53,11 @@ ul li {
 }
 
 .tabela-status-olt, .tabela-status-onu {
-    width: 940px;
-    margin: auto;
+    width: 60%;
+    height: 100%;
+    margin: 0 auto;
     margin-top: 1%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
     border-width: 10px;
     border-style: solid;
     border-color: white;
