--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,12 @@
     background: rgb(3, 62, 140);
     text-transform: uppercase;
     font-size: small;
-    width: 99%;
+    width: 98%;
     margin-top: 0.5%;
     margin-bottom: 1.5%;
     margin-left: 0.5%;
     margin-right: 0.5%;
     padding: 0.5rem;
-    text-decoration: none;
     color: white;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
     text-align: center;
@@ -20,6 +19,12 @@
 
 .loading{
     padding: 2rem;
+}
+
+.ul-menu-one {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .itensOne:hover {
@@ -32,6 +37,10 @@
     border-radius: 5px;
 }
 
+#informacoes-onu, #provisionar-onu, #consulta-olt, #script-olt, #relatorios, #usuarios {
+    color: white;
+    text-decoration: none;
+}
 
 ul li {
     display: inline;
