--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
     margin-bottom: 1.5%;
     margin-left: 0.5%;
     margin-right: 0.5%;
-    padding: 0.5rem;
+    padding: 0.5%;
     color: white;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.5);
     text-align: center;
